# online-shopping-system

./: .gitignore  CMakeLists.txt  build.sh
sql/: CMakeLists.txt  schema.sql
src/: App.cpp  App.h  CMakeLists.txt  main.cpp
src/config/: database.cpp  database.h
src/controllers/: ProductController.cpp  ProductController.h  UserController.cpp  UserController.h
src/models/: Product.cpp  Product.h  ProductDAO.cpp  ProductDAO.h  User.cpp  User.h  UserDAO.cpp  UserDAO.h
src/utils/: DatabaseInitializer.cpp  DatabaseInitializer.h  PasswordHasher.h
tests/: CMakeLists.txt  test_init.cpp  test_main.cpp
